--- a/Javascript/.eslintrc.json
+++ b/Javascript/.eslintrc.json
@@ -6,6 +6,7 @@
         "linebreak-style": 0,
         "indent": [1, "tab"],
         "no-tabs": 0,
-        "max-len": ["error", 140]
+        "max-len": ["error", 140],
+        "exclude": ["jquery-3.1.1.js"]
       }
 }
