--- a/Javascript/.eslintrc.json
+++ b/Javascript/.eslintrc.json
@@ -6,7 +6,8 @@
         "linebreak-style": 0,
         "indent": [1, "tab"],
         "no-tabs": 0,
-        "max-len": ["error", 140],
-        "exclude": ["jquery-3.1.1.js"]
-      }
+        "max-len": ["error", 140],        
+        "no-unused-vars": 0, //["error", { "vars": "all", "args": "after-used", "ignoreRestSiblings": false }
+        "exclude": ["/jquery-3.1.1.js"]
+     }
 }
